# llm-indexing

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE  README.md  compose.yaml  config.container.yaml  config.example.yaml  index-all-drives.ps1  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
crates/lc-core/: Cargo.toml
crates/lc-core/src/: lib.rs
crates/lc-redact/: Cargo.toml
crates/lc-redact/src/: main.rs  rules.rs
data/: abbreviations_en.txt  abbreviations_vi.txt  vision-tags.txt
docs/: ARCHITECTURE.md  HTTP_API.md  PIPELINE.md  SETTINGS-SPEC.md  SOCKET-PROTOCOL.md  VISION-RESEARCH.md  VISION-SPEC.md  VISION.md
scripts/: fetch_data.py  install_windows.ps1
src/: config.rs  embedding.rs  extract.rs  lib.rs  main.rs  media.rs  model.rs  normalize.rs  ocr.rs  pipeline.rs  runtime.rs  service.rs  settings.rs  store.rs  walker.rs
src/claude_index/: __init__.py  analyze.py  cli.py  client.py  config.py  dictionaries.py  extract.py  lang.py  normalize.py  ocr.py  server.py  store.py  walker.py
src/vision/: caption.rs  clip.rs  detector.rs  exif.rs  mod.rs  phash.rs  quality.rs  types.rs  video.rs
tests/: indexing.rs  service.rs  test_smoke.py  test_socket_server.py
