[workspace]
resolver = "2"
members = [
    "crates/lc-core",
    "crates/lc-redact",
]

# The Python package in src/claude_index/ is stage 1 (the indexer) and is not part of
# this workspace. It is frozen behind the container contract in docs/PIPELINE.md, so the
# language boundary stops at `docker run`. crates/lc-index/ (tantivy + pdfium-render +
# leptess) is its intended Rust replacement; when it lands, only compose.yaml changes.

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/danganhtu01/llm-indexing"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"

lc-core = { path = "crates/lc-core" }

[profile.release]
opt-level = 3
lto = true
strip = true
