[package]
name = "llm-indexing"
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/danganhtu01/llm-indexing"
description = "Rust-native EN/VI document indexer with OCR, SQLite FTS5, and an HTTP job service"

[[bin]]
name = "llm-index"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chardetng = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1"
encoding_rs = "0.8"
fastembed = { version = "5.17", default-features = false, features = ["hf-hub-rustls-tls", "image-models", "ort-download-binaries-rustls-tls"] }
hound = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "tiff", "bmp", "webp"] }
kamadak-exif = "0.6"
mailparse = "0.16"
# Object detection (RF-DETR-Nano ONNX) runs on the SAME ort the fastembed
# dependency already pulls in — pinned to its exact version + feature set so the
# build resolves a single ort and reuses fastembed's downloaded ONNX Runtime.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["ndarray", "std", "api-24"] }
quick-xml = "0.38"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-stemmers = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
strsim = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
whisper-rs = "0.16"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
