[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-indexing"
version = "0.2.0"
description = "Fast bilingual (English/Vietnamese) full-text indexer for large drives, with OCR and folder analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ATu", email = "danganhtu01@gmail.com" }]
dependencies = [
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6.23",
  "pillow>=10.0",
  "pytesseract>=0.3.10",
  "charset-normalizer>=3.3",
  "spylls>=0.1.7",
  "snowballstemmer>=2.2",
  "rapidfuzz>=3.5",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.scripts]
claude-index = "claude_index.cli:main"
claude-index-server = "claude_index.server:main"
claude-index-request = "claude_index.client:main"

[tool.setuptools.packages.find]
where = ["src"]
